ensure heading are not covered navbar when we click nav links

--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -33,7 +33,8 @@ body {
   }
 }
 .section {
-  margin: 2rem 0;
+  // margin: 2rem 0;
+  padding-top: 4rem;
 }
 .sub-heading-color {
   color: $highlight;
